--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <h1>Hey Omi 💕</h1>
     <p>Will you be my Valentine?You are my love at first sight in office lunch</p>
 
-    <button class="yes-btn" onclick="alert('YAY!! You know who I'm')">
+    <button class="yes-btn" onclick="alert('YAY!! You know who Im')">
       Yes ✨
     </button>
 
@@ -103,3 +103,4 @@
 
 </body>
 </html>
+
