--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="no-btn" id="noBtn">No 🙈</div>
 
     <h1>Hey Omi 💕</h1>
-    <p>Will you be my Valentine?You are my love at first sight in office lunch</p>
+    <p>Will you be my friend?You are my love at first sight in office</p>
 
     <button class="yes-btn" onclick="alert('YAY!! You know who Im')">
       Yes ✨
@@ -103,4 +103,5 @@
 
 </body>
 </html>
+
 
