--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <h1>Hey Omi 💕</h1>
     <p>Will you be my friend?You are my love at first sight in office</p>
 
-    <button class="yes-btn" onclick="alert('YAY!! You know who Im')">
+    <button class="yes-btn" onclick="alert('nevermind')">
       Yes ✨
     </button>
 
@@ -103,5 +103,6 @@
 
 </body>
 </html>
+
 
 
