--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="card">
     <div class="no-btn" id="noBtn">No 🙈</div>
 
-    <h1>Hey Omi 💕</h1>
+    <h1>Hey Omi </h1>
     <p>Will you be my friend?You are my love at first sight in office</p>
 
     <button class="yes-btn" onclick="alert('nevermind')">
@@ -103,6 +103,7 @@
 
 </body>
 </html>
+
 
 
 
