--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="no-btn" id="noBtn">No 🙈</div>
 
     <h1>Hey Omi </h1>
-    <p>Will you be my friend?You are my love at first sight in office</p>
+    <p>Will you be my friend? Never to late </p>
 
     <button class="yes-btn" onclick="alert('nevermind')">
       Yes ✨
@@ -103,6 +103,7 @@
 
 </body>
 </html>
+
 
 
 
