--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Be My Valentine</title>
+  <title>Be My Friend</title>
   <style>
     * {
       box-sizing: border-box;
@@ -103,6 +103,7 @@
 
 </body>
 </html>
+
 
 
 
